@@ -62,6 +62,9 @@ AC_CHECK_HEADERS(zlib.h,LIBS="$LIBS -lz")
 dnl Check for libgcrypt
 AC_CHECK_HEADERS(gcrypt.h,LIBS="$LIBS -lgcrypt")
 
+dnl Check for libbz2
+AC_CHECK_HEADERS(bzlib.h,LIBS="$LIBS -lbz2")
+
 dnl Either find glib or use the replacement
 AC_MSG_CHECKING(whether to use glib)
 AC_ARG_WITH(glib,
